[gd_scene load_steps=2 format=3 uid="uid://dk54c5nm6psjb"]

[ext_resource type="Script" uid="uid://cvk0t4203ctlh" path="res://components/behaviour_components/enemy_behaviour_components/bomb_bug_behaviour_component/bomb_bug_behaviour_component.gd" id="1_gig1p"]

[node name="BombBugBehaviourComponent" type="Node2D"]
script = ExtResource("1_gig1p")
